--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,6 +1,7 @@
 @import '../../scss/main';
 @import '../../scss/buttons';
 @import '../../scss/product-card';
+@import '../../scss/footer';
 
 .grid {
   width: 100%;
