--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,3 +1,5 @@
+$primary-color: #e3e3e3;
+
 * {
   margin: 0;
   padding: 0;
@@ -5,5 +7,13 @@
 }
 
 body {
+  position: relative;
+  min-height: 100vh;
   font-family: sans-serif;
+}
+
+body::after {
+  content: '';
+  display: block;
+  height: 16rem;
 }
