--- a/src/scss/_product-card.scss
+++ b/src/scss/_product-card.scss
@@ -33,23 +33,32 @@
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
 
-    &:hover {
-      opacity: 1;
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        opacity: 1;
+      }
     }
 
     .product-card__backdrop__inner {
       position: relative;
       width: 100%;
       height: 100%;
+
       .arrow-left,
       .arrow-right {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
+        z-index: 100;
         padding: 1rem;
         color: #fff;
         cursor: pointer;
         user-select: none;
+        visibility: hidden;
+
+        @media (hover: hover) and (pointer: fine) {
+          visibility: visible;
+        }
       }
 
       .arrow-left {
@@ -71,7 +80,7 @@
   .product-card__info {
     height: 7rem;
     padding: 0.5rem 0 1rem 0;
-    background-color: #e3e3e3;
+    background-color: $primary-color;
     border-top: 0.5px solid #999;
   }
 
