--- a/src/pages/scss/_menu.scss
+++ b/src/pages/scss/_menu.scss
@@ -65,4 +65,29 @@ header {
       }
     }
   }
+
+  nav {
+    display: none;
+
+    &.active {
+      display: block;
+      background-color: blanchedalmond;
+      height: calc(100vh - 70px);
+      width: 70vw;
+      padding: 5vw;
+
+      ul {
+        list-style: none;
+
+        li {
+          font-size: 18px;
+          margin-bottom: 15px;
+          a {
+            color: #000000;
+            text-decoration: none;
+          }
+        }
+      }
+    }
+  }
 }
