--- a/src/pages/scss/_menu.scss
+++ b/src/pages/scss/_menu.scss
@@ -7,26 +7,88 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 0 5vw;
-    .menu-icon {
-      .bar {
-        height: 2px;
-        background-color: #000000;
-        margin: 7px 0;
-      }
 
-      .bar1 {
-        width: 20px;
-      }
-      .bar2 {
-        width: 15px;
-      }
-      .bar3 {
-        width: 10px;
-      }
+    #nav-icon {
+      width: 20px;
+      height: 20px;
+      position: relative;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: 0.5s ease-in-out;
+      -moz-transition: 0.5s ease-in-out;
+      -o-transition: 0.5s ease-in-out;
+      transition: 0.5s ease-in-out;
+      cursor: pointer;
+    }
 
-      &:hover {
-        cursor: pointer;
-      }
+    #nav-icon span {
+      display: block;
+      position: absolute;
+      height: 2px;
+      width: 100%;
+      background: #000000;
+      opacity: 1;
+      left: 0;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: 0.25s ease-in-out;
+      -moz-transition: 0.25s ease-in-out;
+      -o-transition: 0.25s ease-in-out;
+      transition: 0.25s ease-in-out;
+    }
+
+    #nav-icon span:nth-child(1) {
+      top: 0px;
+      -webkit-transform-origin: left center;
+      -moz-transform-origin: left center;
+      -o-transform-origin: left center;
+      transform-origin: left center;
+      width: 20px;
+    }
+
+    #nav-icon span:nth-child(2) {
+      top: 10px;
+      -webkit-transform-origin: left center;
+      -moz-transform-origin: left center;
+      -o-transform-origin: left center;
+      transform-origin: left center;
+      width: 15px;
+    }
+
+    #nav-icon span:nth-child(3) {
+      top: 20px;
+      -webkit-transform-origin: left center;
+      -moz-transform-origin: left center;
+      -o-transform-origin: left center;
+      transform-origin: left center;
+      width: 10px;
+    }
+
+    #nav-icon.open span:nth-child(1) {
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -o-transform: rotate(45deg);
+      transform: rotate(45deg);
+      top: 2px;
+      width: 25px;
+    }
+
+    #nav-icon.open span:nth-child(2) {
+      width: 0%;
+      opacity: 0;
+    }
+
+    #nav-icon.open span:nth-child(3) {
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+      top: 20px;
+      width: 25px;
     }
 
     .logo {
