--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -12,14 +12,6 @@ header {
       width: 20px;
       height: 20px;
       position: relative;
-      -webkit-transform: rotate(0deg);
-      -moz-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-      transform: rotate(0deg);
-      -webkit-transition: 0.5s ease-in-out;
-      -moz-transition: 0.5s ease-in-out;
-      -o-transition: 0.5s ease-in-out;
-      transition: 0.5s ease-in-out;
       cursor: pointer;
     }
 
@@ -31,47 +23,29 @@ header {
       background: #000000;
       opacity: 1;
       left: 0;
-      -webkit-transform: rotate(0deg);
-      -moz-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
       transform: rotate(0deg);
-      -webkit-transition: 0.25s ease-in-out;
-      -moz-transition: 0.25s ease-in-out;
-      -o-transition: 0.25s ease-in-out;
       transition: 0.25s ease-in-out;
     }
 
     #nav-icon span:nth-child(1) {
       top: 0px;
-      -webkit-transform-origin: left center;
-      -moz-transform-origin: left center;
-      -o-transform-origin: left center;
       transform-origin: left center;
       width: 20px;
     }
 
     #nav-icon span:nth-child(2) {
       top: 10px;
-      -webkit-transform-origin: left center;
-      -moz-transform-origin: left center;
-      -o-transform-origin: left center;
       transform-origin: left center;
       width: 15px;
     }
 
     #nav-icon span:nth-child(3) {
       top: 20px;
-      -webkit-transform-origin: left center;
-      -moz-transform-origin: left center;
-      -o-transform-origin: left center;
       transform-origin: left center;
       width: 10px;
     }
 
     #nav-icon.open span:nth-child(1) {
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -o-transform: rotate(45deg);
       transform: rotate(45deg);
       top: 2px;
       width: 25px;
@@ -83,9 +57,6 @@ header {
     }
 
     #nav-icon.open span:nth-child(3) {
-      -webkit-transform: rotate(-45deg);
-      -moz-transform: rotate(-45deg);
-      -o-transform: rotate(-45deg);
       transform: rotate(-45deg);
       top: 20px;
       width: 25px;
@@ -129,27 +100,31 @@ header {
   }
 
   nav {
-    display: none;
+    width: 0;
+    overflow-x: hidden;
+    background-color: #e7e7e7;
+    height: calc(100vh - 70px);
+    width: 0;
 
-    &.active {
-      display: block;
-      background-color: blanchedalmond;
-      height: calc(100vh - 70px);
-      width: 70vw;
+    ul {
+      list-style: none;
       padding: 5vw;
+      transition: 0.25s ease-in-out;
 
-      ul {
-        list-style: none;
+      li {
+        font-size: 18px;
+        margin-bottom: 15px;
+        white-space: nowrap;
 
-        li {
-          font-size: 18px;
-          margin-bottom: 15px;
-          a {
-            color: #000000;
-            text-decoration: none;
-          }
+        a {
+          color: #000000;
+          text-decoration: none;
         }
       }
+    }
+    transition: 0.25s ease-in-out;
+    &.active {
+      width: 70vw;
     }
   }
 }
