fix material icons link and z-index in menu.scss

--- a/src/pages/product-details/index.scss
+++ b/src/pages/product-details/index.scss
@@ -2,6 +2,7 @@
 @import '../../scss/buttons';
 @import '../../scss/footer';
 @import '../../scss/product-card';
+@import '../../scss/menu';
 
 .product-card {
   max-width: 50rem;
