--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -6,9 +6,12 @@ body {
 
 header {
   .navbar {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: #d8d8d8;
     z-index: 102;
+    width: 100%;
     height: 70px;
     display: flex;
     flex-direction: row;
@@ -109,6 +112,8 @@ header {
 
   nav {
     position: fixed;
+    top: 70px;
+    left: 0;
     width: 0;
     z-index: 102;
     overflow-x: hidden;
