--- a/src/scss/_product-card.scss
+++ b/src/scss/_product-card.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 90%;
   max-width: 22rem;
-  margin: 6rem auto;
+  margin: 2rem auto 0 auto;
   border: 1px solid #999;
   border-radius: 0.5rem;
   overflow-x: hidden;
