--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -7,7 +7,7 @@
 .grid {
   width: 100%;
   max-width: 1400px;
-  margin: 4.5rem auto;
+  margin: 4.5rem auto 2rem auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(17rem, 26rem));
   justify-content: center;
