improve add-product page

--- a/src/scss/_product-card.scss
+++ b/src/scss/_product-card.scss
@@ -72,8 +72,7 @@
       }
 
       .arrow--inactive {
-        color: rgba(255, 255, 255, 0.4);
-        cursor: default;
+        display: none;
       }
     }
   }
