--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -19,3 +19,22 @@ body::after {
   display: block;
   height: 16rem;
 }
+
+.spinner {
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 4px solid $primary-color;
+  border-right-color: #000;
+  border-radius: 50%;
+  animation: spinner 1s linear infinite;
+}
+
+@keyframes spinner {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
