--- a/src/pages/cart/index.scss
+++ b/src/pages/cart/index.scss
@@ -19,10 +19,14 @@ main {
   }
 
   .product-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+    display: none;
+
+    &.loaded {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
 
     .product {
       position: relative;
@@ -109,12 +113,16 @@ main {
   }
 
   .summary {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 1400px;
-    width: 100%;
-    margin: auto;
+    display: none;
+
+    &.loaded {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 1400px;
+      width: 100%;
+      margin: auto;
+    }
 
     span {
       display: block;
@@ -148,5 +156,18 @@ main {
       font-size: 18px;
       cursor: pointer;
     }
+  }
+}
+
+.spinner {
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 35vh;
+  right: 0;
+
+  &.hide {
+    display: none;
   }
 }
