add ajax http request on add-product form submission

--- a/src/scss/_product-form.scss
+++ b/src/scss/_product-form.scss
@@ -9,7 +9,10 @@
   }
 
   .product-name,
+  .product-catalog-number,
+  .vat,
   .product-price,
+  .product-quantity,
   .product-category,
   .product-desc,
   .product-image {
