--- a/src/pages/product-details/index.scss
+++ b/src/pages/product-details/index.scss
@@ -13,6 +13,10 @@ main {
     height: calc(100vh - 16rem);
     margin: 70px auto 0 auto;
   }
+
+  .product-not-found-message {
+    font-size: 1.2rem;
+  }
 }
 
 .product-card {
